--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-{"id":"78016","variant":"standard"}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -6,23 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TastLink - YumYum Network</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="welcome-screen">
   <div class="npc-card">
-    <h1>ยินดีต้อนรับนักผจญภัย!</h1>
-    <h2>TastLink</h2>
-    <h3>ทีม YumYum Network</h3>
-    <p id="npc-text">NPC: สวัสดี! ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
+    <h1>TastLink</h1>
+    <h2>ทีม YumYum Network</h2>
+    <p>NPC: สวัสดี! ข้าคือผู้เฝ้าดันเจี้ยนแห่ง TastLink ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
     <input type="text" id="player-name" placeholder="พิมพ์ชื่อผู้เล่น">
-    <p>เลือก Emoji อวาตาร์ของเจ้าผู้กล้า:</p>
+    <p>เลือก Emoji อวาตาร์:</p>
     <input type="text" id="avatar-emoji" placeholder="🧙‍♂️" maxlength="2">
     <p>เลือกพื้นหลังอวาตาร์ (สี):</p>
     <input type="color" id="avatar-bg" value="#1e3c72">
     <div id="avatar-preview">🧙‍♂️</div>
-    <p>NPC: ตอนนี้เจ้าผู้กล้าอยู่ที่ดันเจี้ยน โรงเตี้ยม KBS KMITL</p>
-    <p>เควสของเจ้าคือ รีวิวอาหารและโหวตร้านอาหารที่อยากให้มาเปิดในสัปดาห์หน้า!</p>
-    <button id="start-btn">เริ่มผจญภัย</button>
+    <button id="start-btn" class="rpg-btn">เริ่มผจญภัย</button>
   </div>
 </div>
 <script src="script.js"></script>
