--- a/park.html
+++ b/park.html
@@ -1,75 +1,29 @@
-{"id":"78017","variant":"standard"}
 <!DOCTYPE html>
 <html lang="th">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>สวนแห่งนักผจญภัย - TastLink</title>
+<title>สวนนักผจญภัย - TastLink</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="park">
-  <div id="profile-panel">
-    <div id="avatar-display"></div>
-    <h2 id="player-display">นักผจญภัย</h2>
-    <p id="points-display">คะแนน: 0</p>
+<div id="park-screen">
+  <h1>สวนแห่ง TastLink</h1>
+  <div id="player-profile">
+    <div id="player-avatar"></div>
+    <h2 id="player-name-display"></h2>
   </div>
-
-  <div id="shops">
-    <h3>ร้านอาหารแนะนำวันนี้</h3>
-    <div class="shop-card" data-shop="ร้าน A">
-      <h4>ร้าน A</h4>
-      <div class="menu-item" data-menu="ข้าวผัด">ข้าวผัด - 50 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="ส้มตำ">ส้มตำ - 40 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="ต้มยำ">ต้มยำ - 60 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-    </div>
-    <div class="shop-card" data-shop="ร้าน B">
-      <h4>ร้าน B</h4>
-      <div class="menu-item" data-menu="บะหมี่">บะหมี่ - 45 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="ปอเปี๊ยะ">ปอเปี๊ยะ - 30 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="ไก่ทอด">ไก่ทอด - 55 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-    </div>
-    <div class="shop-card" data-shop="ร้าน C">
-      <h4>ร้าน C</h4>
-      <div class="menu-item" data-menu="ซูชิ">ซูชิ - 80 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="ราเมง">ราเมง - 90 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="เทมปุระ">เทมปุระ - 70 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-    </div>
-    <div class="shop-card" data-shop="ร้าน D">
-      <h4>ร้าน D</h4>
-      <div class="menu-item" data-menu="พิซซ่า">พิซซ่า - 150 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="พาสต้า">พาสต้า - 120 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="สลัด">สลัด - 90 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-    </div>
-    <div class="shop-card" data-shop="ร้าน E">
-      <h4>ร้าน E</h4>
-      <div class="menu-item" data-menu="เบอร์เกอร์">เบอร์เกอร์ - 130 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="เฟรนช์ฟราย">เฟรนช์ฟราย - 50 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-      <div class="menu-item" data-menu="น้ำอัดลม">น้ำอัดลม - 20 บาท <button class="vote-shop">โหวตร้าน</button> <button class="vote-menu">โหวตเมนู</button></div>
-    </div>
-  </div>
-
-  <div id="garden">
-    <h3>สวนแห่งนักผจญภัย</h3>
-    <div id="community-feed"></div>
-  </div>
-
-  <div id="leaderboard">
-    <h3>Leaderboard</h3>
-    <ul id="ranking-list"></ul>
-  </div>
-
-  <div id="weekly-event">
-    <h3>โหวตร้านสัปดาห์หน้า</h3>
-    <select id="weekly-shop">
-      <option value="ร้าน A">ร้าน A</option>
-      <option value="ร้าน B">ร้าน B</option>
-      <option value="ร้าน C">ร้าน C</option>
-      <option value="ร้าน D">ร้าน D</option>
-      <option value="ร้าน E">ร้าน E</option>
-    </select>
-    <button id="vote-weekly">โหวต</button>
-  </div>
+  
+  <h3>อาหารแนะนำวันนี้</h3>
+  <div id="daily-food"></div>
+  
+  <h3>ร้านอาหาร</h3>
+  <div id="shops-container"></div>
+  
+  <h3>คอมมูนิตี้แชท</h3>
+  <div id="community-chat"></div>
+  
+  <button id="refresh-btn" class="rpg-btn">รีเฟรชสวน</button>
 </div>
 <script src="script.js"></script>
 </body>
