--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TastLink - YumYum Network</title>
+<title>TastLink - Welcome</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="welcome-screen">
-  <h1>ยินดีต้อนรับนักผจญภัย!</h1>
-  <h2>TastLink</h2>
-  <h3>ทีม YumYum Network</h3>
-  <p>NPC: ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
-  <input type="text" id="player-name" placeholder="พิมพ์ชื่อผู้เล่น">
-  <p>เลือก Emoji อวาตาร์ของเจ้าผู้กล้า:</p>
-  <input type="text" id="avatar-emoji" placeholder="🧙‍♂️" maxlength="2">
-  <p>เลือกพื้นหลังอวาตาร์ (สี):</p>
-  <input type="color" id="avatar-bg" value="#1e3c72">
-  <div id="avatar-preview">🧙‍♂️</div>
-  <button id="start-btn" class="glow-button">เริ่มผจญภัย</button>
+    <h1>TastLink</h1>
+    <h3>ทีม YumYum Network</h3>
+    <p class="npc-text">NPC: สวัสดี! ข้าคือผู้เฝ้าดันเจี้ยนแห่ง TastLink ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
+
+    <input type="text" id="player-name" placeholder="พิมพ์ชื่อผู้เล่น">
+
+    <p>เลือก Emoji อวาตาร์ของเจ้าผู้กล้า:</p>
+    <input type="text" id="avatar-emoji" maxlength="2" placeholder="🧙‍♂️">
+
+    <p>เลือกพื้นหลังอวาตาร์ (สี):</p>
+    <input type="color" id="avatar-bg" value="#1e3c72">
+
+    <div id="avatar-preview">🧙‍♂️</div>
+
+    <button id="start-btn" class="btn-glow">เริ่มผจญภัย</button>
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
