--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <input type="text" id="avatar-emoji" maxlength="2" placeholder="🧙‍♂️">
 
     <p>เลือกพื้นหลังอวาตาร์ (สี):</p>
-    <input type="color" id="avatar-bg" value="#1e3c72">
+    <input type="color" id="avatar-bg" value="#6a4c3b">
 
     <div id="avatar-preview">🧙‍♂️</div>
 
     <button id="start-btn" class="btn-glow">เริ่มผจญภัย</button>
 </div>
-
 <script src="script.js"></script>
 </body>
 </html>
