--- a/park.html
+++ b/park.html
@@ -16,9 +16,7 @@
     </div>
 
     <h3>ร้านค้าแนะนำวันนี้</h3>
-    <div id="shops-container">
-        <!-- ร้านค้าจะถูกสร้างจาก JS -->
-    </div>
+    <div id="shops-container"></div>
 
     <h3>คอมมูนิตี้แชท</h3>
     <div id="chat-box"></div>
