--- a/qu.html
+++ b/qu.html
@@ -10,7 +10,7 @@
 <body>
 <div id="quest-screen">
     <h2>ยินดีต้อนรับสู่โลกแฟนตาซี!</h2>
-    <p class="quest-text">ตอนนี้เจ้าผู้กล้าอยู่ที่ ดันเจี้ยน โรงเตี๊ยม KBS KMITL</p>
+    <p class="quest-text">ตอนนี้เจ้าผู้กล้าอยู่ที่ <b>ดันเจี้ยน / โรงเตี๊ยม KBS KMITL</b></p>
     <p class="quest-text">เควสต์ของเจ้าคือ:</p>
     <ul>
         <li>รีวิวอาหาร</li>
