--- a/quest.html
+++ b/quest.html
@@ -4,21 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TastLink - Quest</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="quest-screen">
-    <h2>ยินดีต้อนรับสู่โลกแฟนตาซี!</h2>
-    <p class="quest-text">ตอนนี้เจ้าผู้กล้าอยู่ที่ <b>ดันเจี้ยน / โรงเตี๊ยม KBS KMITL</b></p>
-    <p class="quest-text">เควสต์ของเจ้าคือ:</p>
-    <ul>
-        <li>รีวิวอาหาร</li>
-        <li>โหวตร้านอาหารที่อยากให้มาเปิดขายในสัปดาห์หน้า</li>
-        <li>พูดคุยกับนักผจญภัยคนอื่นในคอมมูนิตี้</li>
-    </ul>
-    <button id="to-park-btn" class="btn-glow">ไปสวน / ร้านค้า</button>
+    <h1>เควสประจำวัน</h1>
+    <p class="quest-text">เจ้าผู้กล้า, ขณะนี้เจ้าสิงสู่ในดันเจี้ยน โรงเตี้ยม KBS KMITL</p>
+    <p class="quest-text">เควสวันนี้: รีวิวอาหาร, โหวตร้านอาหารที่อยากให้มาเปิดสัปดาห์หน้า, พูดคุยกับนักผจญภัยคนอื่น</p>
+
+    <button id="go-park-btn" class="glow-button">ไปยังสวนและร้านอาหาร</button>
 </div>
-<script src="script.js"></script>
+
+<script src="js/effects.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
