--- a/park.html
+++ b/park.html
@@ -3,28 +3,46 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TastLink - Park</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<title>TastLink - Garden</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="park-screen">
-    <h2>สวนของนักผจญภัย</h2>
+    <h1>สวนของนักผจญภัย</h1>
     <div id="player-info">
         <div id="player-avatar">🧙‍♂️</div>
-        <span id="player-name-display">ผู้เล่น</span>
+        <span id="player-name-display">ชื่อผู้เล่น</span>
+        <span id="player-points">คะแนน: 0</span>
     </div>
 
-    <h3>ร้านค้าแนะนำวันนี้</h3>
-    <div id="shops-container"></div>
+    <h2>ร้านอาหารแนะนำวันนี้</h2>
+    <div id="restaurant-list">
+        <!-- ร้านอาหาร 5 ร้าน -->
+        <div class="restaurant-card">
+            <img src="assets/placeholder.jpg" alt="ร้าน1">
+            <h3>ร้านขนมหวาน</h3>
+            <div class="menu-item" data-restaurant="ร้านขนมหวาน" data-menu="เค้กช็อกโกแลต">เค้กช็อกโกแลต - 120฿
+                <button class="vote-button glow-button">โหวต</button>
+            </div>
+            <div class="menu-item" data-restaurant="ร้านขนมหวาน" data-menu="ไอศกรีมวานิลลา">ไอศกรีมวานิลลา - 90฿
+                <button class="vote-button glow-button">โหวต</button>
+            </div>
+            <div class="menu-item" data-restaurant="ร้านขนมหวาน" data-menu="พายส้ม">พายส้ม - 100฿
+                <button class="vote-button glow-button">โหวต</button>
+            </div>
+        </div>
+        <!-- เพิ่มร้านอื่น ๆ 4 ร้าน เช่นเดียวกัน -->
+    </div>
 
-    <h3>คอมมูนิตี้แชท</h3>
-    <div id="chat-box"></div>
-    <input type="text" id="chat-input" placeholder="พิมพ์ข้อความ...">
-    <button id="chat-send" class="btn-glow">ส่งข้อความ</button>
+    <h2>Community Chat</h2>
+    <div id="community-chat">
+        <div id="chat-messages"></div>
+        <input type="text" id="chat-input" placeholder="พิมพ์ข้อความ...">
+        <button id="chat-send" class="glow-button">ส่ง</button>
+    </div>
 </div>
 
-<script src="data.js"></script>
-<script src="script.js"></script>
+<script src="js/effects.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
