--- a/quest.html
+++ b/quest.html
@@ -3,19 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TastLink - Quest</title>
-<link rel="stylesheet" href="css/style.css">
+<title>Quest - TastLink</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="quest-screen">
-    <h1>เควสประจำวัน</h1>
-    <p class="quest-text">เจ้าผู้กล้า, ขณะนี้เจ้าสิงสู่ในดันเจี้ยน โรงเตี้ยม KBS KMITL</p>
-    <p class="quest-text">เควสวันนี้: รีวิวอาหาร, โหวตร้านอาหารที่อยากให้มาเปิดสัปดาห์หน้า, พูดคุยกับนักผจญภัยคนอื่น</p>
-
-    <button id="go-park-btn" class="glow-button">ไปยังสวนและร้านอาหาร</button>
-</div>
-
-<script src="js/effects.js"></script>
-<script src="js/main.js"></script>
+<div class="container">
+  <div class="quest-box">
+    <h2>โรงเตี๊ยม KBS KMITL</h2>
+    <p id="npc-greet"></p>
+    <p>เควสของเจ้าคือ:</p>
+    <ul>
+      <li>รีวิวอาหาร</li>
+      <li>โหวตร้านอาหารที่อยากให้มาเปิดสัปดาห์หน้า</li>
+      <li>เข้าร่วมคอมมูนิตี้พูดคุยกับนักผจญภัยคนอื่น</li>
+    </ul>
+    <button id="to-park-btn" class=
+<script src="script.js"></script>
 </body>
 </html>
+~~~
