--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TastLink - YumYum Network</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TastLink - เริ่มผจญภัย</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container" id="welcome-screen">
-  <div class="npc-box">
-    <h1>ยินดีต้อนรับนักผจญภัย!</h1>
-    <h2>TastLink</h2>
-    <h3>ทีม YumYum Network</h3>
-    <p>NPC: สวัสดี! ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
-    <input type="text" id="player-name" placeholder="พิมพ์ชื่อผู้เล่น">
-    <p>เลือก Emoji อวาตาร์ของเจ้า:</p>
-    <input type="text" id="avatar-emoji" placeholder="🧙‍♂️" maxlength="2">
-    <p>เลือกพื้นหลังอวาตาร์ (สี):</p>
-    <input type="color" id="avatar-bg" value="#1e3c72">
-    <div id="avatar-preview">🧙‍♂️</div>
-    <button id="start-btn" class="rpg-btn">เริ่มผจญภัย</button>
-  </div>
-</div>
-<script src="script.js"></script>
+    <div class="container">
+        <div id="welcome-screen">
+            <h1>ยินดีต้อนรับนักผจญภัย!</h1>
+            <h2>TastLink - ทีม YumYum Network</h2>
+            <p>NPC: ข้าอยากรู้ชื่อเจ้าผู้กล้า</p>
+            <input type="text" id="player-name" placeholder="พิมพ์ชื่อผู้เล่น">
+            <p>เลือก Emoji อวาตาร์ของเจ้า:</p>
+            <input type="text" id="avatar-emoji" placeholder="🧙‍♂️" maxlength="2">
+            <p>เลือกพื้นหลังอวาตาร์:</p>
+            <input type="color" id="avatar-bg" value="#FFD700">
+            <div id="avatar-preview">🧙‍♂️</div>
+            <button id="start-btn" class="glow-btn">เริ่มผจญภัย</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
-~~~
